Change floor2 html and css

--- a/floor2/floor_2.html
+++ b/floor2/floor_2.html
@@ -9,10 +9,28 @@
     </head>
     <body>
         <div id="Floor">
-            <button class="Left_top_room" onclick=vote(this)>Room 100</button>
-            <button class="Left_bottom_room" onclick=vote(this)>Room 101</button>
-            <button class="Right_top_room" onclick=vote(this)>Room 102</button>
-            <button class="Right_bottom_room" onclick=vote(this)>Room 103</button>
+            <button class="room_100" onclick=vote(this)>Room 100</button>
+            <button class="room_101" onclick=vote(this)>Room 101</button>
+            <button class="room_102" onclick=vote(this)>Room 102</button>
+            <button class="room_103" onclick=vote(this)>Room 103</button>
+            <button class="room_104" onclick=vote(this)>Room 104</button>
+            <button class="room_105" onclick=vote(this)>Room 105</button>
+            <button class="room_106" onclick=vote(this)>Room 106</button>
+            <button class="room_107" onclick=vote(this)>Room 107</button>             -->
+            <button class="room_108" onclick=vote(this)>Room 108</button>
+            <button class="room_109" onclick=vote(this)>Room 109</button>           
+            <button class="room_110" onclick=vote(this)>Room 110</button>
+            <button class="room_111" onclick=vote(this)>Room 111</button>
+            <button class="room_112" onclick=vote(this)>Room 112</button>            
+            <button class="room_113" onclick=vote(this)>Room 113</button>
+            <button class="room_114" onclick=vote(this)>Room 114</button>
+            <button class="room_115" onclick=vote(this)>Room 115</button>
+            <button class="room_116" onclick=vote(this)>Room 116</button>
+            <button class="room_117" onclick=vote(this)>Room 117</button>
+            <button class="room_118" onclick=vote(this)>Room 118</button>
+            <button class="room_119" onclick=vote(this)>Room 119</button>
+            <button class="room_120" onclick=vote(this)>Room 120</button>
+            
         </div>
         <script>
             function vote(element){
