got the original rooms in place. now to do the new rooms...

--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -9,23 +9,12 @@
     </head>
     <body>
         <div id="Floor">
-            <button class="Vestibule" onclick=vote(this)>Room 1000</button>
-            <button class="Science Commons Collaboratory" onclick=vote(this)>Room 101</button>
-            <!-- <button class="Science Commons Lobby" onclick=vote(this)>Room 100</button>  -->
+            <button class="Science_Commons_Lobby" onclick=vote(this)>Room 100</button>
+            <button class="Group_Study" onclick=vote(this)>Room 104</button>
+            <button class="Physics_Lounge" onclick=vote(this)>Room 107</button>
             <button class="Table_1" onclick=vote(this)>Table 1</button>
             <button class="Table_2" onclick=vote(this)>Table 2</button>
             <button class="Table_3" onclick=vote(this)>Table 3</button>
-            <!-- <button class="Big Room" onclick=vote(this)>Room 10</button>
-            <button class="Science Commons Workroom" onclick=vote(this)>Room 106</button>
-            <button class="Group Study" onclick=vote(this)>Room 104</button>
-            <button class="CS Hardware Interface Lab" onclick=vote(this)>Room 108</button>
-            <button class="Physics Faculty Lab Computational" onclick=vote(this)>Room 110</button>
-            <button class="Physics Faculty Lab Laser" onclick=vote(this)>Room 112</button>
-            <button class="Physics Storage" onclick=vote(this)>Room 114</button>
-            <button class="Intro Physics Lab" onclick=vote(this)>Room 111</button>
-            <button class="Physics Faculty Flex Lab" onclick=vote(this)>Room 113</button>
-            <button class="Physics Lounge" onclick=vote(this)>Room 107</button> -->
-            <button class="Hallway" >Hallway</button>
         </div>
         <script>
             function vote(element){
@@ -33,6 +22,6 @@
             }
         </script>
 
-        
+
     </body>
 </html>
