got all the buttons in (except for the circular tables). still need to turn some of the buttons off because those rooms we don't have access to

--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -15,6 +15,16 @@
             <button class="Table_1" onclick=vote(this)>Table 1</button>
             <button class="Table_2" onclick=vote(this)>Table 2</button>
             <button class="Table_3" onclick=vote(this)>Table 3</button>
+            <button class="Vestibule" onclick=vote(this)>Room 1000</button>
+            <button class="Science_Commons_Collaboratory" onclick=vote(this)>Room 101</button>
+            <button class="Question_Mark" onclick=vote(this)>Room ?</button>
+            <button class="I_Dunno" onclick=vote(this)>Room 105</button>
+            <button class="Intro_Physics_Lab" onclick=vote(this)>Room 111</button>
+            <button class="Science_Commons_Workroom" onclick=vote(this)>Room 106</button>
+            <button class="CS_Hardware_Interface_Lab" onclick=vote(this)>Room 108</button>
+            <button class="Physics_Faculty_Lab_Computational" onclick=vote(this)>Room 110</button>
+            <button class="Physics_Faculty_Lab_Laser" onclick=vote(this)>Room 112</button>
+            <button class="Physics_Storage" onclick=vote(this)>Room 114</button>
         </div>
         <script>
             function vote(element){
