buttons: changed colour, font, hover, etc.

--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -6,25 +6,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Floor Example</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="button-style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+
     </head>
     <body>
         <div id="Floor">
-            <button class="Science_Commons_Lobby" onclick=vote(this)>Room 100</button>
-            <button class="Group_Study" onclick=vote(this)>Room 104</button>
-            <button class="Physics_Lounge" onclick=vote(this)>Room 107</button>
-            <button class="Table_1" onclick=vote(this)>Table 1</button>
-            <button class="Table_2" onclick=vote(this)>Table 2</button>
-            <button class="Table_3" onclick=vote(this)>Table 3</button>
-            <button class="Vestibule" onclick=vote(this)>Room 1000</button>
-            <button class="Science_Commons_Collaboratory" onclick=vote(this)>Room 101</button>
-            <button class="Question_Mark" onclick=vote(this)>Room ?</button>
-            <button class="I_Dunno" onclick=vote(this)>Room 105</button>
-            <button class="Intro_Physics_Lab" onclick=vote(this)>Room 111</button>
-            <button class="Science_Commons_Workroom" onclick=vote(this)>Room 106</button>
-            <button class="CS_Hardware_Interface_Lab" onclick=vote(this)>Room 108</button>
-            <button class="Physics_Faculty_Lab_Computational" onclick=vote(this)>Room 110</button>
-            <button class="Physics_Faculty_Lab_Laser" onclick=vote(this)>Room 112</button>
-            <button class="Physics_Storage" onclick=vote(this)>Room 114</button>
+            <button class="Science_Commons_Lobby round font hover_border change_color" onclick=vote(this)>Room 100</button>
+            <button class="Group_Study round font hover_border change_color" onclick=vote(this)>Room 104</button>
+            <button class="Physics_Lounge round font hover_border change_color" onclick=vote(this)>Room 107</button>
+            <button class="Table_1 round font hover_border change_color" onclick=vote(this)>Table 1</button>
+            <button class="Table_2 round font hover_border change_color" onclick=vote(this)>Table 2</button>
+            <button class="Table_3 round font hover_border change_color" onclick=vote(this)>Table 3</button>
+            <button class="Vestibule round font hover_border change_color" onclick=vote(this)>Room 1000</button>
+            <button class="Science_Commons_Collaboratory round font hover_border change_color" onclick=vote(this)>Room 101</button>
+            <button class="Question_Mark round font hover_border change_color" onclick=vote(this)>Room ?</button>
+            <button class="I_Dunno round font hover_border change_color" onclick=vote(this)>Room 105</button>
+            <button class="Intro_Physics_Lab round font hover_border change_color" onclick=vote(this)>Room 111</button>
+            <button class="Science_Commons_Workroom round font hover_border change_color" onclick=vote(this)>Room 106</button>
+            <button class="CS_Hardware_Interface_Lab round font hover_border change_color" onclick=vote(this)>Room 108</button>
+            <button class="Physics_Faculty_Lab_Computational round font hover_border change_color" onclick=vote(this)>Room 110</button>
+            <button class="Physics_Faculty_Lab_Laser round font hover_border change_color" onclick=vote(this)>Room 112</button>
+            <button class="Physics_Storage round font hover_border change_color" onclick=vote(this)>Room 114</button>
         </div>
         <script>
             function vote(element){
