FINALLY did those circular tables...

--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -28,6 +28,9 @@
             <button class="Physics_Faculty_Lab_Computational round font hover_border change_color clicky" onclick=vote(this)>Room 110</button>
             <button class="Physics_Faculty_Lab_Laser round font hover_border change_color clicky" onclick=vote(this)>Room 112</button>
             <button class="Physics_Storage round font hover_border change_color clicky" onclick=vote(this)>Room 114</button>
+            <button class="Table_4 round font hover_border change_color clicky circle" onclick=vote(this)>Table 4</button>
+            <button class="Table_5 round font hover_border change_color clicky circle" onclick=vote(this)>Table 5</button>
+            <button class="Table_6 round font hover_border change_color clicky circle" onclick=vote(this)>Table 6</button>
         </div>
         <script>
             function vote(element){
