--- a/floor 3/thirdFloor.html
+++ b/floor 3/thirdFloor.html
@@ -8,14 +8,24 @@
         <link rel="stylesheet" href="Third_Style.css">
     </head>
     <body>
+        <div>
+
+        </div>
         <div id="Floor">
+            <button class="Room_317" onclick=vote(this)>Room 317</button>
+            <button class="Room_315" onclick=vote(this)>Room 315</button>
+            <button class="Room_318" onclick=vote(this)>Room 318</button>
+            <button class="Room_302" onclick=vote(this)>Room 302</button>
+            <button class="Room_303" onclick=vote(this)>Room 303</button>
+            <button class="Room_314" onclick=vote(this)>Room 314</button>
+            <button class="Room_300" onclick=vote(this)>Room 300</button>
+            <button class="Room_316" onclick=vote(this)>Room 316</button>
+            <button class="Room_308" onclick=vote(this)>Room 308</button>
+            <button class="Room_304" onclick=vote(this)>Room 304</button>
             <button class="Room_312" onclick=vote(this)>Room 312</button>
             <button class="Room_310" onclick=vote(this)>Room 310</button>
-            <button class="Room_308" onclick=vote(this)>Room 308</button>
-            <button class="Study_Booth_1" onclick=vote(this)>Study Booth</button>
-            <button class="Room_302" onclick=vote(this)>Room 302</button>
-            <button class="Room_304" onclick=vote(this)>Room 304</button>
-            <button class="Study_Booth_2" onclick=vote(this)>Study Booth #2</button>
+            <button class="Study_booth_1" onclick=vote(this)>Study booth 1</button>
+            <button class="Study_booth_2" onclick=vote(this)>Study booth 2</button>
         </div>
         <script>
             function vote(element){
