--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -31,6 +31,7 @@
             <button class="Table_4 round font hover_border change_color clicky circle" onclick=vote(this)>Table 4</button>
             <button class="Table_5 round font hover_border change_color clicky circle" onclick=vote(this)>Table 5</button>
             <button class="Table_6 round font hover_border change_color clicky circle" onclick=vote(this)>Table 6</button>
+            <button class="stairs round font stair_color" onclick=vote(this)>stairs</button>
         </div>
         <script>
             function vote(element){
