--- a/button-design/button.html
+++ b/button-design/button.html
@@ -14,10 +14,10 @@
     <!--Icons need to be individually added to html-->
     <body>
         <div id="Floor">
-            <button class="Left_top_room hover_border font" onclick=vote(this)>Room 100</button>
-            <button class="Left_bottom_room round" onclick=vote(this)>Room 101</button>
-            <button class="Right_top_room" onclick=vote(this)><i class="fa fa-door"></i> Room 102</button>
-            <button class="Right_bottom_room" onclick=vote(this)>Room 103</button>
+            <button class="Left_top_room round" onclick=vote(this)>Room 100</button>
+            <button class="Left_bottom_room hover_border" onclick=vote(this)>Room 101</button>
+            <button class="Right_top_room" onclick=vote(this)><i class="fa fa-lock"></i> Room 102</button>
+            <button class="Right_bottom_room" onclick=vote(this)><i class="fa fa-lock"></i>Room 103</button>
         </div>
         <script>
             function vote(element){
