change button style

--- a/floor2/floor_2.html
+++ b/floor2/floor_2.html
@@ -6,30 +6,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Floor Example</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="button-style.css">
     </head>
     <body>
         <div id="Floor">
-            <button class="room_100" onclick=vote(this)>Room 100</button>
-            <button class="room_101" onclick=vote(this)>Room 101</button>
-            <button class="room_102" onclick=vote(this)>Room 102</button>
-            <button class="room_103" onclick=vote(this)>Room 103</button>
-            <button class="room_104" onclick=vote(this)>Room 104</button>
-            <button class="room_105" onclick=vote(this)>Room 105</button>
-            <button class="room_106" onclick=vote(this)>Room 106</button>
-            <button class="room_107" onclick=vote(this)>Room 107</button>             -->
-            <button class="room_108" onclick=vote(this)>Room 108</button>
-            <button class="room_109" onclick=vote(this)>Room 109</button>           
-            <button class="room_110" onclick=vote(this)>Room 110</button>
-            <button class="room_111" onclick=vote(this)>Room 111</button>
-            <button class="room_112" onclick=vote(this)>Room 112</button>            
-            <button class="room_113" onclick=vote(this)>Room 113</button>
-            <button class="room_114" onclick=vote(this)>Room 114</button>
-            <button class="room_115" onclick=vote(this)>Room 115</button>
-            <button class="room_116" onclick=vote(this)>Room 116</button>
-            <button class="room_117" onclick=vote(this)>Room 117</button>
-            <button class="room_118" onclick=vote(this)>Room 118</button>
-            <button class="room_119" onclick=vote(this)>Room 119</button>
-            <button class="room_120" onclick=vote(this)>Room 120</button>
+            <button class="room_100 round font hover_border change_color clicky" onclick=vote(this)>Room 100</button>
+            <button class="room_101 round font hover_border change_color clicky" onclick=vote(this)>Room 101</button>
+            <button class="room_102 round font hover_border change_color clicky" onclick=vote(this)>Room 102</button>
+            <button class="room_103 round font hover_border change_color clicky" onclick=vote(this)>Room 103</button>
+            <button class="room_104 round font hover_border change_color clicky" onclick=vote(this)>Room 104</button>
+            <button class="room_105 round font hover_border change_color clicky" onclick=vote(this)>Room 105</button>
+            <button class="room_106 round font hover_border change_color clicky" onclick=vote(this)>Room 106</button>
+            <button class="room_107 round font hover_border change_color clicky" onclick=vote(this)>Room 107</button>             -->
+            <button class="room_108 round font hover_border change_color clicky" onclick=vote(this)>Room 108</button>
+            <button class="room_109 round font hover_border change_color clicky" onclick=vote(this)>Room 109</button>           
+            <button class="room_110 round font hover_border change_color clicky" onclick=vote(this)>Room 110</button>
+            <button class="room_111 round font hover_border change_color clicky" onclick=vote(this)>Room 111</button>
+            <button class="room_112 round font hover_border change_color clicky" onclick=vote(this)>Room 112</button>            
+            <button class="room_113 round font hover_border change_color clicky" onclick=vote(this)>Room 113</button>
+            <button class="room_114 round font hover_border change_color clicky" onclick=vote(this)>Room 114</button>
+            <button class="room_115 round font hover_border change_color clicky" onclick=vote(this)>Room 115</button>
+            <button class="room_116 round font hover_border change_color clicky" onclick=vote(this)>Room 116</button>
+            <button class="room_117 round font hover_border change_color clicky" onclick=vote(this)>Room 117</button>
+            <button class="room_118 round font hover_border change_color clicky" onclick=vote(this)>Room 118</button>
+            <button class="room_119 round font hover_border change_color clicky" onclick=vote(this)>Room 119</button>
+            <button class="room_120 round font hover_border change_color clicky" onclick=vote(this)>Room 120</button>
             
         </div>
         <script>
