--- a/floor1/floor_1.html
+++ b/floor1/floor_1.html
@@ -18,9 +18,8 @@
             <button class="Table_1 round font hover_border change_color clicky" onclick=vote(this)>Table 1</button>
             <button class="Table_2 round font hover_border change_color clicky" onclick=vote(this)>Table 2</button>
             <button class="Table_3 round font hover_border change_color clicky" onclick=vote(this)>Table 3</button>
-            <button class="Vestibule round font hover_border change_color clicky" onclick=vote(this)>Room 1000</button>
             <button class="Science_Commons_Collaboratory round font hover_border change_color clicky" onclick=vote(this)>Room 101</button>
-            <button class="Question_Mark round font hover_border change_color clicky" onclick=vote(this)>Room ?</button>
+            <button class="Question_Mark round font hover_border change_color clicky" onclick=vote(this)>Room 103</button>
             <button class="I_Dunno round font hover_border change_color clicky" onclick=vote(this)>Room 105</button>
             <button class="Intro_Physics_Lab round font hover_border change_color clicky" onclick=vote(this)>Room 111</button>
             <button class="Science_Commons_Workroom round font hover_border change_color clicky" onclick=vote(this)>Room 106</button>
@@ -31,7 +30,7 @@
             <button class="Table_4 round font hover_border change_color clicky circle" onclick=vote(this)>Table 4</button>
             <button class="Table_5 round font hover_border change_color clicky circle" onclick=vote(this)>Table 5</button>
             <button class="Table_6 round font hover_border change_color clicky circle" onclick=vote(this)>Table 6</button>
-            <button class="stairs round font stair_color" onclick=vote(this)>stairs</button>
+            <button class="stairs round font stair_color vertical" onclick=vote(this)>stairs</button>
         </div>
         <script>
             function vote(element){
